fix: custom service appointments query
